--- a/src/app/Layouts/navbar/navbar.component.html
+++ b/src/app/Layouts/navbar/navbar.component.html
@@ -1,104 +1,252 @@
-<nav [class.py-2]="isScroll"
-    class=" duration-500  fixed  bg-gray-100 dark:bg-slate-900 w-full z-50 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
-    <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto py-3 max-sm:px-4 sm:px-8 ">
-        <a
-            class="max-sm:w-[40%]    dark:bg-gray-300 dark:rounded-full  p-1 flex items-center  space-x-3 rtl:space-x-reverse">
-            <img src="/images/freshcart-logo.svg" class=" h-8" alt="Flowbite Logo">
-            <!-- <span class="self-center text-2xl font-semibold grayspace-nowrap dark:text-gray-50"></span> -->
-        </a>
+<nav
+  [class.py-2]="isScroll"
+  class="duration-500 fixed bg-gray-100 dark:bg-slate-900 w-full z-50 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
+>
+  <div
+    class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto py-3 max-sm:px-4 sm:px-8"
+  >
+    <a
+      class="max-sm:w-[40%] dark:bg-gray-300 dark:rounded-full p-1 flex items-center space-x-3 rtl:space-x-reverse"
+    >
+      <img src="/images/freshcart-logo.svg" class="h-8" alt="Flowbite Logo" />
+      <!-- <span class="self-center text-2xl font-semibold grayspace-nowrap dark:text-gray-50"></span> -->
+    </a>
 
-        @if(isLogin()){
-        <div class="ms-5 items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-            <ul class="  flex flex-col p-3   font-medium    md:space-x-1 rtl:space-x-reverse md:flex-row md:mt-0    ">
-                <li>
-                    <a routerLink="/home" routerLinkActive="text-white bg-green-800  "
-                        class="block transition-all duration-500   hover:bg-green-800 hover:text-white   rounded   px-3 py-2    dark:text-gray-50  dark:hover:bg-gray-700 "
-                        aria-current="page">Home</a>
-                </li>
-                <li>
-                    <a routerLink="/products" routerLinkActive="text-white bg-green-800  "
-                        class="block transition-all duration-500 hover:bg-green-800 hover:text-white  text-gray-900 rounded  px-3 py-2     dark:text-gray-50  dark:hover:bg-gray-700   ">Product</a>
-                </li>
+    @if(isLogin()){
+    <div
+      class="ms-5 items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      id="navbar-sticky"
+    >
+      <ul
+        class="flex flex-col p-3 font-medium md:space-x-1 rtl:space-x-reverse md:flex-row md:mt-0"
+      >
+        <li>
+          <a
+            routerLink="/home"
+            routerLinkActive="text-white bg-green-800  "
+            class="block transition-all duration-500 hover:bg-green-800 hover:text-white rounded px-3 py-2 dark:text-gray-50 dark:hover:bg-gray-700"
+            aria-current="page"
+            >Home</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/products"
+            routerLinkActive="text-white bg-green-800  "
+            class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded px-3 py-2 dark:text-gray-50 dark:hover:bg-gray-700"
+            >Product</a
+          >
+        </li>
 
-                <li>
-                    <a routerLink="/categories" routerLinkActive="text-white bg-green-800 "
-                        class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded  px-3 py-2   dark:text-gray-50  dark:hover:bg-gray-700   ">Categories</a>
-                </li>
-                <li>
-                    <a routerLink="/brands" routerLinkActive="text-white bg-green-800 "
-                        class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded   px-3 py-2     dark:text-gray-50  dark:hover:bg-gray-700   ">Brands</a>
-                </li>
+        <li>
+          <a
+            routerLink="/categories"
+            routerLinkActive="text-white bg-green-800 "
+            class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded px-3 py-2 dark:text-gray-50 dark:hover:bg-gray-700"
+            >Categories</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/brands"
+            routerLinkActive="text-white bg-green-800 "
+            class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded px-3 py-2 dark:text-gray-50 dark:hover:bg-gray-700"
+            >Brands</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/allorders"
+            routerLinkActive="text-white bg-green-800 "
+            class="block transition-all duration-500 hover:bg-green-800 hover:text-white text-gray-900 rounded px-3 py-2 dark:text-gray-50 dark:hover:bg-gray-700"
+            >All Orders</a
+          >
+        </li>
 
-                <div class="md:hidden   items-center  flex text-xl gap-5 me-4 ">
-                    <a href=""><i class="dark:text-blue-400 text-blue-700  fa-brands fa-facebook"></i></a>
-                    <a href=""><i class=" dark:text-blue-400 text-blue-700 fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="dark:text-red-500  text-red-700 fa-brands fa-instagram"></i></a>
-                    <a href=""><i class=" dark:text-white  text-black fa-brands fa-tiktok"></i></a>
-                </div>
-            </ul>
-
-            <a role="button" (click)="authService.logoutUser()"
-                class="   lg:hidden bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2  m-2  rounded hover:bg-red-600   dark:text-white transition-all duration-300 hover:text-green-950   ">LogOut</a>
+        <div class="md:hidden items-center flex text-xl gap-5 me-4">
+          <a href=""
+            ><i
+              class="dark:text-blue-400 text-blue-700 fa-brands fa-facebook"
+            ></i
+          ></a>
+          <a href=""
+            ><i
+              class="dark:text-blue-400 text-blue-700 fa-brands fa-linkedin"
+            ></i
+          ></a>
+          <a href=""
+            ><i
+              class="dark:text-red-500 text-red-700 fa-brands fa-instagram"
+            ></i
+          ></a>
+          <a href=""
+            ><i class="dark:text-white text-black fa-brands fa-tiktok"></i
+          ></a>
         </div>
+      </ul>
 
-        }
-
-        <div class="ms-auto flex md:order-2 items-center space-x-3 md:space-x-0 rtl:space-x-reverse">
-
-            <div class="items-center flex mx-2 ">
-
-                @if(!isLogin()){
-
-                <a routerLink="/register" routerLinkActive="text-white bg-green-800  " role="button"
-                    class=" px-3 py-2 rounded  ">Register</a>
-                <div class="dark:bg-white w-[1px] bg-black mx-2"></div>
-                <a routerLink="/login" routerLinkActive="text-white bg-green-800  " role="button"
-                    class=" px-3 py-2 rounded   ms-2">Login
-                </a>
-                }
-                @else {
-                <li routerLink="/cart" routerLinkActive="   text-green-600 rounded  "
-                    class=" group cursor-pointer items-center align-middle text-center list-none">
-                    <a
-                        class="block transition-all duration-500  py-1 group-hover:text-green-600   text-gray-900 rounded  px-3    dark:text-gray-50    "><i
-                            class=" text-2xl fas fa-cart-shopping"></i></a>
-                    <span class=" max-md:hidden  font-serif">Cart</span>
-                </li>
-
-                <li routerLink="/wishlist" routerLinkActive="  text-red-600 rounded  "
-                    class="  group cursor-pointer mx-1    py-1 duration-500 hover:text-red-600  list-none">
-                    <a
-                        class="relative  block transition-all duration-500   py-1 text-gray-900 rounded  px-3    dark:text-gray-50    "><i
-                            class=" text-2xl  text-red-700  fas fa-heart   group-hover:text-red-500 duration-500"></i>
-                        <span
-                            class="absolute top-[50%] start-[50%]  text-red-600 font-serif  rounded-full">{{wishlistService.wishCount.getValue()}}</span></a>
-
-                    <span class=" max-md:hidden  font-serif">wishlist </span>
-                </li>
-
-                <a role="button" (click)="authService.logoutUser()"
-                    class=" max-lg:hidden bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2  m-2  rounded hover:bg-red-600   dark:text-white transition-all duration-300 hover:text-green-950   ">LogOut</a>
-                }
-            </div>
-
-
-        </div>
-        @if(isLogin()){
-        <button data-collapse-toggle="navbar-sticky" type="button"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            aria-controls="navbar-sticky" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M1 1h15M1 7h15M1 13h15" />
-            </svg>
-        </button>
-        }
-
+      <a
+        role="button"
+        (click)="loguot()"
+        class="lg:hidden bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2 m-2 rounded hover:bg-red-600 dark:text-white transition-all duration-300 hover:text-green-950"
+        >LogOut</a
+      >
     </div>
 
+    }
 
+    <div
+      class="ms-auto flex md:order-2 items-center space-x-3 md:space-x-0 rtl:space-x-reverse"
+    >
+      <div class="items-center flex mx-2">
+        @if(!isLogin()){
+        <div class="max-sm:hidden items-center flex text-xl gap-5 me-4">
+          <a href=""
+            ><i
+              class="dark:text-blue-400 text-blue-700 fa-brands fa-facebook"
+            ></i
+          ></a>
+          <a href=""
+            ><i
+              class="dark:text-blue-400 text-blue-700 fa-brands fa-linkedin"
+            ></i
+          ></a>
+          <a href=""
+            ><i
+              class="dark:text-red-500 text-red-700 fa-brands fa-instagram"
+            ></i
+          ></a>
+          <a href=""
+            ><i class="dark:text-white text-black fa-brands fa-tiktok"></i
+          ></a>
+        </div>
+        <a
+          routerLink="/register"
+          routerLinkActive="text-white bg-green-800  "
+          role="button"
+          class="px-3 py-2 rounded"
+          >Register</a
+        >
+        <div class="dark:bg-white w-[2px] h-7 bg-black mx-2"></div>
+        <a
+          routerLink="/login"
+          routerLinkActive="text-white bg-green-800  "
+          role="button"
+          class="px-3 py-2 rounded ms-2"
+          >Login
+        </a>
+        } @else {
+        <li
+          routerLink="/cart"
+          routerLinkActive="   text-green-600 rounded  "
+          class="group cursor-pointer items-center align-middle text-center list-none"
+        >
+          <a
+            class="block transition-all duration-500 py-1 group-hover:text-green-600 text-gray-900 rounded px-3 dark:text-gray-50"
+            ><i class="text-2xl fas fa-cart-shopping"></i
+          ></a>
+          <span class="max-md:hidden font-serif">Cart</span>
+        </li>
 
+        <li
+          routerLink="/wishlist"
+          routerLinkActive="  text-red-600 rounded  "
+          class="group cursor-pointer mx-1 py-1 duration-500 hover:text-red-600 list-none"
+        >
+          <a
+            class="relative block transition-all duration-500 py-1 text-gray-900 rounded px-3 dark:text-gray-50"
+            ><i
+              class="text-2xl text-red-700 fas fa-heart group-hover:text-red-500 duration-500"
+            ></i>
+            <span
+              class="absolute top-[50%] start-[50%] text-red-600 font-serif rounded-full"
+              >{{ wishlistService.wishCount.getValue() }}</span
+            ></a
+          >
 
-
+          <span class="max-md:hidden font-serif">wishlist </span>
+        </li>
+        <button
+          (click)="loguot()"
+          class="block max-lg:hidden bg-gray-500 px-3 text-white mas-sm:px-1 max-sm:py-1 py-2 m-2 rounded hover:bg-red-600 dark:text-white transition-all duration-300 hover:text-green-950"
+          type="button"
+        >
+          LogOut
+        </button>
+        }
+      </div>
+    </div>
+    @if(isLogin()){
+    <button
+      data-collapse-toggle="navbar-sticky"
+      type="button"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      aria-controls="navbar-sticky"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="w-5 h-5"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 17 14"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 1h15M1 7h15M1 13h15"
+        />
+      </svg>
+    </button>
+    }
+  </div>
 </nav>
+
+<div
+  id="popup-modal"
+  tabindex="-1"
+  [class.hidden]="logoutt"
+  class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+>
+  <div class="relative p-4 w-full max-w-md mx-auto max-h-full">
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <div class="p-4 md:p-5 text-center">
+        <svg
+          class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          />
+        </svg>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">
+          Are you sure you want to LogOut ?
+        </h3>
+        <button
+          (click)="sure()"
+          type="button"
+          class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center"
+        >
+          Yes, I'm sure
+        </button>
+        <button
+          (click)="cancel()"
+          type="button"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+        >
+          No, cancel
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
