--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -164,7 +164,7 @@
 
     } @else{
     <h1
-      class="text-slate-900 font-serif text-center text-xl dark:text-white capitalize"
+      class="text-slate-900 font-serif text-center text-xl dark:text-slate-900 capitalize"
     >
       your cart is empty put some product in cart and check out
     </h1>
