--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -129,12 +129,7 @@
           <img
             src="/images/grocery-banner-2.jpeg"
             alt="sitting place"
-            class="w-full mt-8 md:mt-6 hidden sm:block"
-          />
-          <img
-            class="w-full mt-4 sm:hidden"
-            src="https://i.ibb.co/6XYbN7f/Rectangle-29.png"
-            alt="sitting place"
+            class="w-full mt-8 md:mt-6sm:block"
           />
         </div>
       </div>
@@ -182,12 +177,7 @@
           <img
             src="/images/slider-image-3.jpeg"
             alt="sitting place"
-            class="w-full sm:block hidden"
-          />
-          <img
-            class="w-full sm:hidden"
-            src="https://i.ibb.co/dpXStJk/Rectangle-29.png"
-            alt="sitting place"
+            class="w-full sm:block"
           />
         </div>
         <div
