--- a/src/app/Layouts/navbar/navbar.component.html
+++ b/src/app/Layouts/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav
+  [class.bg-opacity-80]="isScroll"
   [class.py-1]="isScroll"
-  [class.px-8]="isScroll"
-  class="duration-700 fixed bg-gray-100 dark:bg-slate-900 w-full z-50 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
+  [class.sm:px-8]="isScroll"
+  [class.dark:bg-opacity-80]="isScroll"
+  class="duration-700 transition-all fixed bg-opacity-100 bg-gray-100 dark:bg-slate-900 w-full z-50 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
 >
   <div
     class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto py-3 max-sm:px-4 sm:px-8"
@@ -100,18 +102,8 @@
       class="ms-auto flex md:order-2 items-center space-x-3 md:space-x-0 rtl:space-x-reverse"
     >
       <div class="items-center flex mx-2">
-        <label class="flex flex-col items-center cursor-pointer">
-          <input type="checkbox" id="toggel" value="" class="sr-only peer" />
-          <div
-            class="mb-3 mt-1 relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-600 dark:peer-checked:bg-green-600"
-          ></div>
-          <p
-            class="max-sm:hidden text-sm font-medium text-gray-900 dark:text-gray-300"
-          >
-            Mood
-          </p>
-        </label>
         @if(!isLogin()){
+
         <div class="max-sm:hidden items-center flex text-xl gap-5 me-4">
           <a href=""
             ><i
@@ -151,14 +143,18 @@
         <li
           routerLink="/cart"
           routerLinkActive="   text-green-600 rounded  "
-          class="group cursor-pointer items-center align-middle text-center list-none"
+          class="group me-2 cursor-pointer items-center align-middle text-center list-none"
         >
           <a
-            class="block transition-all duration-500 py-1 group-hover:text-green-600 text-gray-900 rounded px-3 dark:text-gray-50"
-            ><i class="relative text-2xl fas fa-cart-shopping"></i>
+            class="relative block transition-all duration-500 py-1 group-hover:text-green-600 text-gray-900 rounded px-3 dark:text-gray-50"
+            ><i class="text-2xl fas fa-cart-shopping"></i>
             <span
-              class="relative text-lg font-medium top-[5px] start-[3%] text-green-600 bg-white p-1 font-serif rounded-full"
-              >{{ cartService.cartCount.getValue() }}</span
+              class="absolute text-lg font-medium size-5 flex items-center justify-center top-[-6%] start-[75%] text-green-600 bg-white font-sans rounded-full"
+              >{{
+                cartService.cartCount.getValue()
+                  ? cartService.cartCount.getValue()
+                  : 0
+              }}</span
             >
           </a>
           <span class="max-md:hidden font-serif">Cart</span>
